--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,400&display=swap');
 html{
   font-size: 10px;
 }
@@ -21,4 +22,84 @@ code {
 
 img {
   max-width: 100%;
+}
+
+
+/* REGISTER */
+div.register{
+  width: 50%;
+  margin: 45px auto;
+  background: #EEF0F2;
+  border-radius: 20px;
+  padding: 50px;
+  font-weight: 600;
+  font-family: 'Open Sans', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 22px;
+  height: 450px;
+}
+
+button.register{
+  background: #FFB800;
+  border: none;
+  border-radius: 10px;
+  margin-left: 8px;
+  margin-top: 15px;
+  font-weight: 600;
+  padding-left: 5px;
+  padding-right: 5px;
+  color: #30323D;
+  height: 40px;
+  width: 100px;
+}
+
+button.register-disabled{
+  background: #414141;
+  border: none;
+  border-radius: 10px;
+  margin-left: 8px;
+  margin-top: 15px;
+  font-weight: 600;
+  padding-left: 5px;
+  padding-right: 5px;
+  color: #ffffff;
+  height: 40px;
+  width: 100px;
+}
+
+button.login{
+  border: none;
+  font-weight: 600;
+  margin-top: 15px;
+  border-radius: 10px;
+  color: #30323D;
+  height: 40px;
+}
+
+h1.title{
+  font-weight: bold;
+  font-size: 32px;
+}
+
+div.btn-control{
+  background: red;
+  display: flex;
+  justify-content: end;;
+}
+
+.form{
+  height: 45px;
+  background: #FFFFFF !important;
+  border: 1px solid #E5E5E5;
+  box-sizing: border-box;
+  border-radius: 10px;
+  padding: 15px;
+  font-family: 'Open Sans', sans-serif;
+  color: #464646;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 22px;
 }
