--- a/src/index.css
+++ b/src/index.css
@@ -24,21 +24,18 @@ img {
   max-width: 100%;
 }
 
+a {
+  color: #30323D;
+}
+
+a:hover{
+  color: #30323D;
+  text-decoration: none;
+}
 
 /* REGISTER */
-button.login{
-  border: none;
-  font-weight: 600;
-  margin-top: 15px;
-  border-radius: 10px;
-  color: #30323D;
-  height: 40px;
-}
 
-h1.title{
-  font-weight: bold;
-  font-size: 32px;
-}
+
 
 div.btn-control{
   background: red;
