--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,8 @@ div.btn-control{
   font-weight: normal;
   font-size: 16px;
   line-height: 22px;
+}
+
 :root {
   --Red: #E55934;
   --Green: #23BE7B;
