--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ a:hover {
 }
 
 :root {
-  --White: #ffffff;
+  --White: #fff;
   --Red: #e55934;
   --Green: #23be7b;
   --Primary: #ffb800;
@@ -47,6 +47,6 @@ a:hover {
   --TextError: #e55934;
   --TextPrimary: #30323d;
   --TextDisabled: #414141;
-  --Border: #eeeeee;
-  --Background: #F9F9F9;
+  --Border: #eee;
+  --Background: #f9f9f9;
 }
